--- a/blog-web/package.json
+++ b/blog-web/package.json
@@ -1,9 +1,9 @@
 {
   "version": "0.0.0",
   "private": true,
-  "name": "angular-phonecat",
-  "description": "A tutorial application for AngularJS",
-  "repository": "https://github.com/angular/angular-phonecat",
+  "name": "blog-angular",
+  "description": "BLog para estudo do AngularJs e Bootstrap",
+  "repository": "https://github.com/gfeitosa/blog_angular",
   "license": "MIT",
   "devDependencies": {
     "karma": "^0.12.16",
