--- a/blogYo/package.json
+++ b/blogYo/package.json
@@ -29,6 +29,7 @@
     "time-grunt": "^1.0.0",
     "grunt-karma": "~0.10.1",
     "karma-phantomjs-launcher": "~0.1.4",
+    "karma-chrome-launcher": "^0.1.4",
     "jasmine-core": "~2.2.0",
     "karma": "~0.12.31",
     "karma-jasmine": "~0.3.5"
