--- a/blog/blog-api/pom.xml
+++ b/blog/blog-api/pom.xml
@@ -61,6 +61,11 @@
 			<artifactId>jersey-media-json-jackson</artifactId>
 			<version>${jersey.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 
 	</dependencies>
 </project>
