--- a/blogYo/bower.json
+++ b/blogYo/bower.json
@@ -7,7 +7,8 @@
     "bootstrap": "^3.2.0",
     "angular-resource": "^1.3.0",
     "angular-ui-router": "~0.2.13",
-    "angular-bootstrap": "~0.12.1"
+    "angular-bootstrap": "~0.12.1",
+    "angular-cookies": "~1.3.14"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
