--- a/blogYo/bower.json
+++ b/blogYo/bower.json
@@ -8,7 +8,10 @@
     "angular-resource": "^1.3.0",
     "angular-ui-router": "~0.2.13",
     "angular-bootstrap": "~0.12.1",
-    "angular-cookies": "~1.3.14"
+    "angular-cookies": "~1.3.14",
+    "angular-local-storage": "~0.1.5",
+    "angular-loading-bar": "~0.7.1",
+    "angular-animate": "~1.3.14"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
