--- a/blogYo/bower.json
+++ b/blogYo/bower.json
@@ -11,7 +11,8 @@
     "angular-cookies": "~1.3.14",
     "angular-local-storage": "~0.1.5",
     "angular-loading-bar": "~0.7.1",
-    "angular-animate": "~1.3.14"
+    "angular-animate": "~1.3.14",
+    "toastr": "~2.1.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
