--- a/blogYo/test/.jshintrc
+++ b/blogYo/test/.jshintrc
@@ -8,7 +8,7 @@
   "eqeqeq": true,
   "immed": true,
   "indent": 2,
-  "latedef": true,
+  "latedef": false,
   "newcap": true,
   "noarg": true,
   "quotmark": "single",
@@ -33,4 +33,3 @@
     "spyOn": false
   }
 }
-
