--- a/blogYo/bower.json
+++ b/blogYo/bower.json
@@ -2,19 +2,23 @@
   "name": "blog-yo",
   "version": "0.0.0",
   "dependencies": {
+    "angular": "1.3.15",
+    "angular-resource": "1.3.15",
+    "angular-animate": "1.3.15",
+    "angular-cookies": "1.3.15",
     "jquery": "2.1.3",
-    "angular": "^1.3.0",
-    "bootstrap": "^3.2.0",
-    "angular-resource": "^1.3.0",
-    "angular-ui-router": "~0.2.13",
-    "angular-bootstrap": "~0.12.1",
-    "angular-cookies": "~1.3.14",
-    "angular-local-storage": "~0.1.5",
-    "angular-loading-bar": "~0.7.1",
-    "angular-animate": "~1.3.14"
+    "bootstrap": "3.2.0",
+    "angular-ui-router": "0.2.13",
+    "angular-bootstrap": "0.12.1",
+    "angular-local-storage": "0.1.5",
+    "angular-loading-bar": "0.7.1",
+    "textAngular": "~1.3.11"
+  },
+  "resolutions": {
+    "angular": "1.3.15"
   },
   "devDependencies": {
-    "angular-mocks": "^1.3.0"
+    "angular-mocks": "1.3.15"
   },
   "appPath": "app",
   "moduleName": "blogYoApp"
