--- a/blog/blog-api/src/main/frontend/bower.json
+++ b/blog/blog-api/src/main/frontend/bower.json
@@ -12,7 +12,8 @@
     "angular-bootstrap": "0.12.1",
     "angular-local-storage": "0.1.5",
     "angular-loading-bar": "0.7.1",
-    "textAngular": "~1.3.11"
+    "textAngular": "~1.3.11",
+    "toastr": "~2.1.1"
   },
   "resolutions": {
     "angular": "1.3.15"
